--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.2",
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
     "next": "14.2.3",
