--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "mysql": "^2.18.1",
     "mysql2": "^3.9.7",
     "next": "14.2.3",
+    "node-fetch": "^3.3.2",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
